update action params

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer install --${{ matrix.stability }} --prefer-dist --no-interaction
+          composer install --no-interaction --optimize-autoloader
 
       - name: List Installed Dependencies
         run: composer show -D
